--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-          <link rel="stylesheet" href="sign-in.css">
+          <link rel="stylesheet" href="css/sign-in.css">
     </head>   
 
     <body>
