--- a/main/sign-in.html
+++ b/main/sign-in.html
@@ -26,6 +26,9 @@
                 </div>
             </form>
         </div>
+
+        <!-- TODO: Forgot password pop up -->
+        <!-- TODO: Sign Up form pop up-->
     </body>
 
 
