--- a/main/recents.html
+++ b/main/recents.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
-          <link rel="stylesheet" href="css/users-feed.css">
+          <link rel="stylesheet" href="css/recents.css">
     </head>   
 
     <body>
