--- a/main/books.html
+++ b/main/books.html
@@ -10,8 +10,9 @@
 
         <!-- TODO: Highlight the link the page is on -->
         <div class="sidenav">
-            <h3>Movie and Book Tracker</h2>
-            <a href="recents.html">User's Feed</a>
+            <h3>Movie & Book</h3>
+            <h3>Tracker</h3>
+            <a href="recents.html" id="recents">User's Feed</a>
             <a href="movies.html">Your Movies</a>
             <a href="books.html">Your Books</a>
             <a id="settings" href="#">Settings</a>
