--- a/main/recents.html
+++ b/main/recents.html
@@ -10,7 +10,7 @@
         <div class="sidenav">
             <h3>Movie & Book</h3>
             <h3>Tracker</h3>
-            <a href="recents.html" id="usersfeedbar">User's Feed</a>
+            <a href="recents.html" id="recents">User's Feed</a>
             <a href="movies.html">Your Movies</a>
             <a href="books.html">Your Books</a>
             <a href="#" id="settings">Settings</a>
