--- a/main/books.html
+++ b/main/books.html
@@ -19,6 +19,10 @@
 
         <div class="main">
             <h2>Books</h2>
+            <div class="no-entry-message">
+                <p>You don't have any entries. Add a book or movie...</p>
+                <p class="add__button"><input type="submit" name="add" value="Add"></p>
+            </div>
         </div>
     </body>
 </html>
