--- a/main/recents.html
+++ b/main/recents.html
@@ -19,8 +19,10 @@
 
         <div class="main">
             <h2>Recents</h2>
-            <p>You don't have any entries. Add a book or movie...</p>
-            <p class="add__button"><input type="submit" name="add" value="Add"></p>
+            <div class="no-entry-message">
+                <p>You don't have any entries. Add a book or movie...</p>
+                <p class="add__button"><input type="submit" name="add" value="Add"></p>
+            </div>
         </div>
     </body>
 </html>
