Adding same format to each page

--- a/main/movies.html
+++ b/main/movies.html
@@ -20,8 +20,8 @@
 
         <div class="main">
             <h2>Movies</h2>
-            <div class="no-entry-message">
-                <p>You don't have any entries. Add a book or movie...</p>
+            <div class="no-entry">
+                <p>You don't have any entries. Add a movie...</p>
                 <p class="add__button"><input type="submit" name="add" value="Add"></p>
             </div>
         </div>
