spacing was whack

--- a/main/books.html
+++ b/main/books.html
@@ -10,8 +10,7 @@
 
         <!-- TODO: Highlight the link the page is on -->
         <div class="sidenav">
-            <h3>Movie & Book</h3>
-            <h3>Tracker</h3>
+            <h3>Movie & Book Tracker</h3>
             <a href="recents.html" id="recents">User's Feed</a>
             <a href="movies.html">Your Movies</a>
             <a href="books.html">Your Books</a>
@@ -21,7 +20,7 @@
         <div class="main">
             <h2>Books</h2>
             <div class="no-entry">
-                <p>You don't have any entries. Add a book...</p>
+                <p>You don't have any entries! Add a book...</p>
                 <p class="add__button"><input type="submit" name="add" value="Add"></p>
             </div>
         </div>
