--- a/main/recents.html
+++ b/main/recents.html
@@ -8,8 +8,7 @@
     <body>
 
         <div class="sidenav">
-            <h3>Movie & Book</h3>
-            <h3>Tracker</h3>
+            <h3>Movie & Book Tracker</h3>
             <a href="recents.html" id="recents">User's Feed</a>
             <a href="movies.html">Your Movies</a>
             <a href="books.html">Your Books</a>
@@ -19,8 +18,7 @@
             <header>
                 <h2>Recents</h2> 
                 <div class="no-entry">
-                    <p>You don't have any entries!</p>
-                    <p>Add a book or movie</p>
+                    <p>You don't have any entries! Add a book or movie...</p>
                     <p class="add__button"><input type="submit" name="add" value="Add"></p>
                 </div>
             </header>
